[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "tscbench"
version = "0.1.0"
requires-python = ">=3.12,<3.14"
dependencies = [
    "tscglue==0.1.2",
]

[project.optional-dependencies]
dev = [
    "ruff",
    "isort",
    "pytest",
    "s3fs",
    "boto3",
    "awscli",
    "moto[s3]",
]
notebooks = [
    "jupyter",
    "jupyterlab",
    "ipykernel",
    "hvplot",
]

[tool.hatch.build.targets.wheel]
packages = ["tscbench"]

[tool.hatch.build.targets.sdist]
include = [
    "/tscbench",
    "/scripts",
    "/README.md",
    "/pyproject.toml",
]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP"]
ignore = ["N803", "N806"]

[tool.isort]
profile = "black"
line_length = 100

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]

[tool.uv.sources]
tscglue = { path = "../TSCGlue", editable = true }
